# distiq-code

./: .env.example  .gitignore  CHANGELOG.md  CURSOR_MODELS.md  CURSOR_README.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  RESTORE_CURSOR.bat  SETUP_CURSOR.bat  SET_SYSTEM_PROXY.bat  cursor_cert.pem  cursor_key.pem  pyproject.toml  telegram-post.md  test_cursor_api.py  test_router.py
docs/: COST_OPTIMIZATION_STRATEGY.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  tool-compression.md
examples/: tool_compression_demo.py
src/: cursor_cert.pem  cursor_key.pem
src/distiq_code/: __init__.py  cli.py  clipboard.py  config.py  embedding_router.py  orchestrator.py  routing.py
src/distiq_code/agents/: __init__.py
src/distiq_code/auth/: __init__.py  cli_provider.py
src/distiq_code/cache/: __init__.py  semantic_cache.py
src/distiq_code/compression/: __init__.py  compressor.py  tool_compressor.py
src/distiq_code/cursor/: __init__.py  auth.py  client.py  protobuf_parser.py  proxy.py  router.py  ssl_gen.py
src/distiq_code/indexing/: __init__.py  context_builder.py  embedder.py  indexer.py  parser.py  remote_embedder.py  vector_store.py
src/distiq_code/optimization/: __init__.py  history_summarizer.py
src/distiq_code/providers/: __init__.py  anthropic.py  base.py  deepseek.py  openai_compat.py
src/distiq_code/server/: __init__.py  app.py  main.py
src/distiq_code/server/routes/: chat.py  health.py  messages.py
src/distiq_code/skills/: __init__.py
src/distiq_code/stats/: __init__.py  cost_tracker.py  tracker.py
src/distiq_code/tools/: __init__.py  registry.py  web_search.py
tests/: test_tool_compression.py
tests/e2e/: test_integration.py
